# ZPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zxj/zplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  ZPlayer.cpp  ZPlayer.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/zxj/zplayer/: Constant.java  MainActivity.java  ZPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/zxj/zplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
